修改创造发电机GUI显示